<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:id="@+id/nameLabel" android:textStyle="bold"
		android:layout_width="wrap_content" android:paddingRight="10px"
		android:layout_height="wrap_content" android:text="@string/bookmark_name" />
	<EditText android:id="@+id/nameValue" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:singleLine="true"
		android:text="" android:textSize="18sp" />

	<TextView android:id="@+id/descriptionkLabel"
		android:textStyle="bold" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/bookmark_description" />
	<EditText android:id="@+id/descriptionValue" android:minLines="1"
		android:layout_width="fill_parent" android:layout_height="48dip"
		android:singleLine="false" android:maxLines="2" 
		android:textSize="14sp" />

	<TextView android:id="@+id/validationError" android:textStyle="bold"
		android:layout_width="wrap_content" android:paddingRight="10px"
		android:layout_height="wrap_content" android:text="" />

	<LinearLayout 
		android:layout_width="270dp" android:layout_height="wrap_content"
		 android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:paddingTop="2dip" android:paddingLeft="2dip"
			android:paddingRight="2dip">
			<Button android:id="@+id/addBtn" android:layout_width="0dip"
				android:layout_gravity="left" android:layout_weight="1"
				android:maxLines="2"  android:layout_height="wrap_content" />
			<Button android:id="@+id/cancelBtn" android:layout_width="0dip"
				android:layout_gravity="right" android:layout_weight="1"
				android:text="@string/CANCEL_LABEL"
				android:maxLines="2" android:layout_height="wrap_content" />
		
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

	